--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,47 @@
 /*  your css code here. If applicable */
+
+body{
+    
+
+
+.book-library{
+    
+    display: flex;
+    flex-direction: column;
+    background-color: #f8f8f8;
+}
+    justify-content: center;
+
+
+}
+
+#name{
+    font-weight: bolder;
+    font-size: ;
+}
+
+.book{
+    padding: 10px;
+    margin: 20px;
+    background-color: #ffffff;
+}
+
+img{
+     display: block;
+     margin: auto;
+     
+}
+
+h1{
+    text-align: center;
+}
+
+.btn{
+    padding: 10px;
+    background-color: #2ecc71;
+    color: white;
+    font-weight: bold;
+    width: 100%;
+    border-color: #2ecc71;
+    border-radius: 5px;
+}
