--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 /*  your css code here. If applicable */
 
-body{
-    
+
 
 
 .book-library{
@@ -9,7 +8,7 @@ body{
     display: flex;
     flex-direction: column;
     background-color: #f8f8f8;
-}
+
     justify-content: center;
 
 
@@ -18,6 +17,10 @@ body{
 #name{
     font-weight: bolder;
     font-size: ;
+}
+
+#author{
+	color: #777777;
 }
 
 .book{
@@ -32,7 +35,7 @@ img{
      
 }
 
-h1{
+h2{
     text-align: center;
 }
 
