--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
     font-size: ;
 }
 
-#author{
+#color_author{
 	color: #777777;
 	
 }
@@ -28,6 +28,9 @@
     padding: 10px;
     margin: 20px;
     background-color: #ffffff;
+}
+div{
+	background-color: #ffffff;
 }
 
 img{
@@ -40,7 +43,7 @@ h1{
     text-align: center;
 }
 
-.btn{
+.price{
     padding: 10px;
     background-color: #2ecc71;
     color: white;
